[package]
name = "samp-launcher-plus"
version = "1.0.0"
description = "SAMP Launcher Plus - Elegant SA-MP Server Launcher"
authors = ["you"]
license = ""
repository = ""
default-run = "samp-launcher-plus"
edition = "2021"
rust-version = "1.60"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5", features = ["api-all", "dialog-open", "fs-read-file", "fs-write-file", "shell-open"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
zip = "0.6"
winreg = "0.52"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]